testing with spock and jUnit5